extensions/oidc/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-namespace
spec:
  ports:
    - name: http
      port: 443
      protocol: TCP
      targetPort: 10000
  selector:
    app: example-app #! this name must match the name of the deployment in the deployment.yml
